[package]
name = "actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "uuid", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }